gxr/sys/gxr/src/gxr-context.h

G_BEGIN_DECLS

#define GXR_TYPE_CONTEXT gxr_context_get_type()
GxrContext *gxr_context_new (GxrAppType  type,
                             char       *app_name,
                             uint32_t    app_version);
GxrContext *gxr_context_new_from_vulkan_extensions (GxrAppType type,
                                                    GSList *instance_ext_list,
                                                    GSList *device_ext_list,
                                                    char       *app_name,
                                                    uint32_t    app_version);
gboolean
gxr_context_get_head_pose (GxrContext *self, graphene_matrix_t *pose);
void
gxr_context_get_frustum_angles (GxrContext *self, GxrEye eye,
                                float *left, float *right,
                                float *top, float *bottom);
gboolean
gxr_context_init_framebuffers (GxrContext           *self,
                               VkExtent2D            extent,
                               VkSampleCountFlagBits sample_count,
                               GulkanRenderPass    **render_pass);
void
gxr_context_get_projection (GxrContext *self,
                            GxrEye eye,
                            float near,
                            float far,
                            graphene_matrix_t *mat);
void
gxr_context_get_view (GxrContext *self,
                      GxrEye eye,
                      graphene_matrix_t *mat);
gboolean
gxr_context_begin_frame (GxrContext *self);
gboolean
gxr_context_end_frame (GxrContext *self);
void
gxr_context_request_quit (GxrContext *self);
GulkanClient*
gxr_context_get_gulkan (GxrContext *self);
struct _GxrDeviceManager;
struct _GxrDeviceManager *
gxr_context_get_device_manager (GxrContext *self);
GulkanFrameBuffer *
gxr_context_get_acquired_framebuffer (GxrContext *self, uint32_t view);