gxr/sys/gxr/src/gxr-device.h

G_BEGIN_DECLS

#define GXR_TYPE_DEVICE gxr_device_get_type()
GxrDevice *
gxr_device_new (guint64 device_id, gchar *model_name);
gboolean
gxr_device_initialize (GxrDevice *self);
gboolean
gxr_device_is_controller (GxrDevice *self);
void
gxr_device_set_is_pose_valid (GxrDevice *self, bool valid);
gboolean
gxr_device_is_pose_valid (GxrDevice *self);
void
gxr_device_set_transformation_direct (GxrDevice         *self,
                                      graphene_matrix_t *mat);
void
gxr_device_get_transformation_direct (GxrDevice         *self,
                                      graphene_matrix_t *mat);
guint64
gxr_device_get_handle (GxrDevice *self);
void
gxr_device_set_handle (GxrDevice *self, guint64 handle);