gxr/sys/src/lib.rs


impl ::std::fmt::Debug for GxrDevice {
    fn fmt(&self, f: &mut ::std::fmt::Formatter) -> ::std::fmt::Result {
        f.debug_struct(&format!("GxrDevice @ {self:p}"))
         .field("parent_instance", &self.parent_instance)
         .finish()
    }
}

#[repr(C)]
pub struct GxrDeviceManager {
    _data: [u8; 0],
    _marker: core::marker::PhantomData<(*mut u8, core::marker::PhantomPinned)>,
}

impl ::std::fmt::Debug for GxrDeviceManager {
    fn fmt(&self, f: &mut ::std::fmt::Formatter) -> ::std::fmt::Result {
        f.debug_struct(&format!("GxrDeviceManager @ {self:p}"))
         .finish()
    }
}

#[repr(C)]
pub struct GxrManifest {
    _data: [u8; 0],
    _marker: core::marker::PhantomData<(*mut u8, core::marker::PhantomPinned)>,
}

impl ::std::fmt::Debug for GxrManifest {
    fn fmt(&self, f: &mut ::std::fmt::Formatter) -> ::std::fmt::Result {
        f.debug_struct(&format!("GxrManifest @ {self:p}"))
         .finish()
    }
}

#[link(name = "gxr-0.16")]
extern "C" {

    //=========================================================================
    // GxrAction
    //=========================================================================
    pub fn gxr_action_get_type() -> GType;
    pub fn gxr_action_new(context: *mut GxrContext) -> *mut GxrAction;
    pub fn gxr_action_new_from_type_url(context: *mut GxrContext, action_set: *mut GxrActionSet, type_: GxrActionType, url: *mut c_char) -> *mut GxrAction;
    pub fn gxr_action_sets_poll(sets: *mut *mut GxrActionSet, count: u32) -> gboolean;
    pub fn gxr_action_emit_analog(self_: *mut GxrAction, event: *mut GxrAnalogEvent);
    pub fn gxr_action_emit_digital(self_: *mut GxrAction, event: *mut GxrDigitalEvent);
    pub fn gxr_action_emit_pose(self_: *mut GxrAction, event: *mut GxrPoseEvent);
    pub fn gxr_action_get_action_set(self_: *mut GxrAction) -> *mut GxrActionSet;
    pub fn gxr_action_get_action_type(self_: *mut GxrAction) -> GxrActionType;
    pub fn gxr_action_get_handle(self_: *mut GxrAction) -> *mut c_void;
    pub fn gxr_action_get_haptic_action(self_: *mut GxrAction) -> *mut GxrAction;
    pub fn gxr_action_get_num_bindings(self_: *mut GxrAction) -> u32;
    pub fn gxr_action_get_url(self_: *mut GxrAction) -> *mut c_char;
    pub fn gxr_action_poll(self_: *mut GxrAction) -> gboolean;
    pub fn gxr_action_set_action_set(self_: *mut GxrAction, action_set: *mut GxrActionSet);
    pub fn gxr_action_set_action_type(self_: *mut GxrAction, type_: GxrActionType);
    pub fn gxr_action_set_bindings(self_: *mut GxrAction, bindings: *mut c_void);
    pub fn gxr_action_set_digital_from_float_haptic(self_: *mut GxrAction, haptic_action: *mut GxrAction);
    pub fn gxr_action_set_digital_from_float_threshold(self_: *mut GxrAction, threshold: c_float);
    pub fn gxr_action_set_url(self_: *mut GxrAction, url: *mut c_char);
    pub fn gxr_action_trigger_haptic(self_: *mut GxrAction, start_seconds_from_now: c_float, duration_seconds: c_float, frequency: c_float, amplitude: c_float, controller_handle: u64) -> gboolean;
    pub fn gxr_action_update_controllers(self_: *mut GxrAction);

    //=========================================================================
    // GxrActionSet
    //=========================================================================
    pub fn gxr_action_set_get_type() -> GType;
    pub fn gxr_action_set_new_from_url(context: *mut GxrContext, manifest: *mut GxrManifest, url: *mut c_char) -> *mut GxrActionSet;
    pub fn gxr_action_set_append_action(self_: *mut GxrActionSet, action: *mut GxrAction);
    pub fn gxr_action_set_connect(self_: *mut GxrActionSet, type_: GxrActionType, url: *mut c_char, callback: gobject::GCallback, data: gpointer) -> gboolean;
    pub fn gxr_action_set_connect_digital_from_float(self_: *mut GxrActionSet, url: *mut c_char, threshold: c_float, haptic_url: *mut c_char, callback: gobject::GCallback, data: gpointer) -> *mut GxrAction;
    pub fn gxr_action_set_get_actions(self_: *mut GxrActionSet) -> *mut glib::GSList;
    pub fn gxr_action_set_get_handle(self_: *mut GxrActionSet) -> *mut c_void;
    pub fn gxr_action_set_get_manifest(self_: *mut GxrActionSet) -> *mut GxrManifest;

    //=========================================================================
    // GxrContext
    //=========================================================================
    pub fn gxr_context_get_type() -> GType;
    pub fn gxr_context_new(app_name: *mut c_char, app_version: u32) -> *mut GxrContext;
    pub fn gxr_context_new_from_vulkan_extensions(instance_ext_list: *mut glib::GSList, device_ext_list: *mut glib::GSList, app_name: *mut c_char, app_version: u32) -> *mut GxrContext;
    pub fn gxr_context_attach_action_sets(self_: *mut GxrContext, sets: *mut *mut GxrActionSet, count: u32) -> gboolean;
    pub fn gxr_context_begin_frame(self_: *mut GxrContext) -> gboolean;
    pub fn gxr_context_end_frame(self_: *mut GxrContext) -> gboolean;
    pub fn gxr_context_get_acquired_framebuffer(self_: *mut GxrContext) -> *mut gulkan::GulkanFrameBuffer;
    pub fn gxr_context_get_buffer_index(self_: *mut GxrContext) -> u32;
    pub fn gxr_context_get_device_manager(self_: *mut GxrContext) -> *mut GxrDeviceManager;
    pub fn gxr_context_get_eye_position(self_: *mut GxrContext, eye: GxrEye, v: *mut graphene::graphene_vec3_t);
    pub fn gxr_context_get_framebuffer_at(self_: *mut GxrContext, i: u32) -> *mut gulkan::GulkanFrameBuffer;
    pub fn gxr_context_get_frustum_angles(self_: *mut GxrContext, eye: GxrEye, left: *mut c_float, right: *mut c_float, top: *mut c_float, bottom: *mut c_float);
    pub fn gxr_context_get_gulkan(self_: *mut GxrContext) -> *mut gulkan::GulkanContext;
    pub fn gxr_context_get_head_pose(self_: *mut GxrContext, pose: *mut graphene::graphene_matrix_t) -> gboolean;
    pub fn gxr_context_get_projection(self_: *mut GxrContext, eye: GxrEye, near: c_float, far: c_float, mat: *mut graphene::graphene_matrix_t);
    pub fn gxr_context_get_runtime_device_extensions(self_: *mut GxrContext, out_list: *mut *mut glib::GSList) -> gboolean;
    pub fn gxr_context_get_runtime_instance_extensions(self_: *mut GxrContext, out_list: *mut *mut glib::GSList) -> gboolean;
    pub fn gxr_context_get_swapchain_extent(self_: *mut GxrContext, view_index: u32) -> vulkan::VkExtent2D;
    pub fn gxr_context_get_swapchain_length(self_: *mut GxrContext) -> u32;
    pub fn gxr_context_get_view(self_: *mut GxrContext, eye: GxrEye, mat: *mut graphene::graphene_matrix_t);
    pub fn gxr_context_init_framebuffers(self_: *mut GxrContext, extent: vulkan::VkExtent2D, sample_count: vulkan::VkSampleCountFlagBits, render_pass: *mut *mut gulkan::GulkanRenderPass) -> gboolean;
    pub fn gxr_context_poll_events(self_: *mut GxrContext);
    pub fn gxr_context_request_quit(self_: *mut GxrContext);
    pub fn gxr_context_wait_frame(self_: *mut GxrContext) -> gboolean;

    //=========================================================================
    // GxrController
    //=========================================================================
    pub fn gxr_controller_get_type() -> GType;
    pub fn gxr_controller_new(controller_handle: u64) -> *mut GxrController;
    pub fn gxr_controller_get_hand_grip_pose(self_: *mut GxrController, pose: *mut graphene::graphene_matrix_t);
    pub fn gxr_controller_get_pointer_pose(self_: *mut GxrController, pose: *mut graphene::graphene_matrix_t) -> gboolean;
    pub fn gxr_controller_is_pointer_pose_valid(self_: *mut GxrController) -> gboolean;
    pub fn gxr_controller_update_hand_grip_pose(self_: *mut GxrController, event: *mut GxrPoseEvent);
    pub fn gxr_controller_update_pointer_pose(self_: *mut GxrController, event: *mut GxrPoseEvent);

    //=========================================================================
    // GxrDevice
    //=========================================================================
    pub fn gxr_device_get_type() -> GType;
    pub fn gxr_device_new(device_id: u64) -> *mut GxrDevice;
    pub fn gxr_device_get_handle(self_: *mut GxrDevice) -> u64;
    pub fn gxr_device_get_transformation_direct(self_: *mut GxrDevice, mat: *mut graphene::graphene_matrix_t);
    pub fn gxr_device_initialize(self_: *mut GxrDevice) -> gboolean;
    pub fn gxr_device_is_controller(self_: *mut GxrDevice) -> gboolean;
    pub fn gxr_device_is_pose_valid(self_: *mut GxrDevice) -> gboolean;
    pub fn gxr_device_set_handle(self_: *mut GxrDevice, handle: u64);
    pub fn gxr_device_set_is_pose_valid(self_: *mut GxrDevice, valid: bool);
    pub fn gxr_device_set_transformation_direct(self_: *mut GxrDevice, mat: *mut graphene::graphene_matrix_t);

    //=========================================================================
    // GxrDeviceManager
    //=========================================================================
    pub fn gxr_device_manager_get_type() -> GType;
    pub fn gxr_device_manager_new() -> *mut GxrDeviceManager;
    pub fn gxr_device_manager_add(self_: *mut GxrDeviceManager, device_id: u64, is_controller: bool) -> gboolean;
    pub fn gxr_device_manager_connect_pose_actions(self_: *mut GxrDeviceManager, action_set: *mut GxrActionSet, pointer_pose_url: *mut c_char, hand_grip_pose_url: *mut c_char);
    pub fn gxr_device_manager_get(self_: *mut GxrDeviceManager, device_id: u64) -> *mut GxrDevice;
    pub fn gxr_device_manager_get_controllers(self_: *mut GxrDeviceManager) -> *mut glib::GSList;
    pub fn gxr_device_manager_get_devices(self_: *mut GxrDeviceManager) -> *mut glib::GList;
    pub fn gxr_device_manager_remove(self_: *mut GxrDeviceManager, device_id: u64);
    pub fn gxr_device_manager_update_poses(self_: *mut GxrDeviceManager, poses: *mut GxrPose);

    //=========================================================================
    // GxrManifest
    //=========================================================================
    pub fn gxr_manifest_get_type() -> GType;
    pub fn gxr_manifest_new(resource_path: *const c_char, manifest_name: *const c_char) -> *mut GxrManifest;
    pub fn gxr_manifest_get_binding_filenames(self_: *mut GxrManifest) -> *mut glib::GSList;
    pub fn gxr_manifest_get_binding_manifests(manifest: *mut GxrManifest) -> *mut glib::GSList;
    pub fn gxr_manifest_load_actions(self_: *mut GxrManifest, action_stream: *mut gio::GInputStream) -> gboolean;
    pub fn gxr_manifest_load_bindings(self_: *mut GxrManifest, resource_path: *const c_char) -> gboolean;

    //=========================================================================
    // Other functions
    //=========================================================================
    pub fn gxr_io_create_directory_if_needed(path: *mut c_char) -> gboolean;
    pub fn gxr_io_get_cache_path(dir_name: *const c_char) -> *mut glib::GString;
    pub fn gxr_io_write_resource_to_file(res_base_path: *const c_char, cache_path: *mut c_char, file_name: *const c_char, file_path: *mut glib::GString) -> gboolean;

}
